# p0rtix

./: .gitignore  COMMANDS.md  LICENSE  README.md  log_utils.sh  main.sh  misc_services.sh  nmap.sh  nse_utils.sh  p0rtix.py  port_utils.sh  ports.sh  pyproject.toml  services.sh  web.sh  webscan.sh
.github/workflows/: ci.yml  tests.yml
docs/: operator-console.md  sample-findings.md
docs/superpowers/plans/: 2026-05-23-adcs-esc-chain.md  2026-06-05-sample-flag.md  2026-06-11-console-v2-phase3.md
lib/: analyze.py  crack.py  credsmode.py  deps.py  findings.py  followup.py  hosts.py  ike.py  logger.py  models.py  nmap.py  runner.py  scope.py  services.py  state.py  ui.py  web.py  wordlists.py  workspace.py
lib/engine/: __init__.py  access.py  action.py  actions_builtin.py  commands.py  console.py  exploit_hints.py  facts.py  posture.py  registry.py  runmode.py  scheduler.py
lib/mcp/: __init__.py  server.py  session.py
tests/: test_cli_targets.py  test_crack_ikepsk.py  test_deps.py  test_engine_access.py  test_engine_action.py  test_engine_actions_builtin.py  test_engine_commands.py  test_engine_console.py  test_engine_dashboard.py  test_engine_exploit_hints.py  test_engine_facts.py  test_engine_nmap.py  test_engine_posture.py  test_engine_rearm.py  test_engine_recon_gaps.py  test_engine_registry.py  test_engine_runmode.py  test_engine_scheduler.py  test_engine_service_web.py  test_findings_runner.py  test_ike.py  test_mcp_session.py  test_scope.py  test_services_parsers.py  test_web_deltas.py  test_wordlists_crack.py
tools/: setup-privs.sh
(+2 files in other folders)
